[package]
name = "random-world"
description = "Implementation of Machine Learning methods for confident prediction (e.g., Conformal Predictors) and related ones introduced in the book Algorithmic Learning in a Random World (ALRW)"
version = "0.3.0"
license = "MIT"
repository = "https://github.com/gchers/random-world"
authors = ["Giovanni Cherubin <g.chers@gmail.com>"]
exclude = [
    "examples/*"
]

[dependencies]
rand = "0.3"
csv = "1.0.0-beta.5"
pcg_rand = "0.7.0"
itertools = "0.6.2"
ordered-float = "0.5.0"
rusty-machine = "0.5.4"
ndarray = "0.10.0"
docopt = "0.8"
serde = "1.0"
serde_derive = "1.0"
statrs = "0.9.0"
quadrature = "0.1.2"
approx = "0.1.1"
lazysort = "0.2.0"
